deleted old code

--- a/gpt_dev.ipynb
+++ b/gpt_dev.ipynb
@@ -489,7 +489,13 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "torch.Size([32, 65])\n",
+            "torch.Size([32, 65])\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "tensor(4.8786, grad_fn=<NllLossBackward0>)\n",
             "\n",
             "Sr?qP-QWktXoL&jLDJgOLVz'RIoDqHdhsV&vLLxatjscMpwLERSPyao.qfzs$Ys$zF-w,;eEkzxjgCKFChs!iWW.ObzDnxA Ms$3\n"
@@ -574,13 +580,13 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "4.587916374206543\n"
+            "3.721843719482422\n"
           ]
         }
       ],
       "source": [
         "batch_size = 32\n",
-        "for steps in range(100): # increase number of steps for good results...\n",
+        "for steps in range(10000): # increase number of steps for good results...\n",
         "\n",
         "    # sample a batch of data\n",
         "    xb, yb = get_batch('train')\n",
