--- a/gpt1.ipynb
+++ b/gpt1.ipynb
@@ -2,74 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import gpt\n",
     "import os\n",
-    "from gpt import GPTLanguageModel, decode"
+    "from gpt import GPTLanguageModel, decode, encode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10.788929 M parameters\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/pytorch21/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "step 0: train loss 4.2227, val loss 4.2305\n",
-      "step 500: train loss 1.7549, val loss 1.9057\n",
-      "step 1000: train loss 1.3914, val loss 1.6041\n",
-      "step 1500: train loss 1.2676, val loss 1.5255\n",
-      "step 2000: train loss 1.1833, val loss 1.5015\n",
-      "step 2500: train loss 1.1268, val loss 1.4876\n",
-      "step 3000: train loss 1.0723, val loss 1.4855\n",
-      "step 3499: train loss 1.0162, val loss 1.4980\n",
-      "\n",
-      "And God not he be both put up her punished;\n",
-      "The aravitation of your discards of your his;\n",
-      "And soul informed in arms, his traws rooted to kissubject,\n",
-      "Do skings, alLong and men expressites of these sorrow.\n",
-      "\n",
-      "MAMILLIA:\n",
-      "A man strive, 'tis so, much to be sicker;\n",
-      "That's my confidented words at I have some inflicted\n",
-      "That noble unto my master's.\n",
-      "\n",
-      "DUKE VINCENTIO:\n",
-      "Good try; and his likely lander departured wars\n",
-      "Upon our opinience, and paterful withours.\n",
-      "\n",
-      "FRIAR Romeo-match; I had witch'd away's but our past\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gpt.train()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +36,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[61, 46, 39, 58, 1, 57, 43, 56, 60, 47, 41, 43, 57, 1, 46, 43, 1, 46, 39, 57, 1, 42, 53, 52, 43, 1, 44, 53, 56, 1, 46, 47, 57, 1, 41, 53, 59, 52, 58, 56, 63, 1, 12]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "43"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_text = \"what services he has done for his country ?\"\n",
+    "input_tokens = encode(input_text)\n",
+    "print(input_tokens)\n",
+    "len(input_tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "what services he has done for his country ?\n",
+      "\n",
+      "Second Servant:\n",
+      "It stands, sir; and, this inful thing;\n",
+      "we'll prove your husband. When we rebest his, I\n",
+      "stand will believe your arres: for I do; and power\n",
+      "As I will know these sad\n",
+      "'Son and must be th\n"
+     ]
+    }
+   ],
+   "source": [
+    "context = torch.zeros((1, len(input_tokens)), dtype=torch.long, device=device)\n",
+    "context[0] = torch.tensor(input_tokens, dtype=torch.long)\n",
+    "print(decode(model.generate(context, max_new_tokens=200)[0].tolist()))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -90,41 +100,36 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "If be in feeling,--He cannot commit the glory?\n",
+      " Kind Richard and 'twas the moxney.\n",
       "\n",
-      "First Servant:\n",
-      "Ye are not, or twice the had his deposed\n",
-      "man and valiant the traitor to the complaine.\n",
+      "KING RICHARD III:\n",
+      "Yea, my Lord,\n",
+      "Nobility and myself; wicked us my stay,\n",
+      "And buk my crown,\n",
+      "Whose vengeanance shall be desert, as I hreceive:\n",
+      "My name, as best is at Plewis,\n",
+      "My less heavy known and rightly guilty have\n",
+      "A fin anger busin.\n",
       "\n",
-      "ARCHIDAPULET:\n",
-      "'Sir, five; smell; these peers it is.\n",
+      "DUKE OF YORK:\n",
+      "My dear right.\n",
       "\n",
-      "ANTIGONUS:\n",
-      "'This there wakes, 'twas we not men for twenty lames.\n",
-      "Look some other examplotter:\n",
-      "Ner their poor membreeting at the Policy\n",
-      "And I swere to lack them in law perform,\n",
-      "Because I would leave no gentleman raid\n",
-      "To make on them appear I talk.\n",
-      "For jay a thonat back: the bish war home,\n",
-      "And giv\n"
+      "KING RICHARD III:\n",
+      "They seem not; in, give me one again.\n",
+      "\n",
+      "QUEEN MARGARET:\n",
+      "Well, welcome, gentle Nurse, thither the commony.\n",
+      "\n",
+      "QUEEN MARGARET:\n",
+      "The prettige hath before they keeep the foot!\n",
+      "This is my m\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "5001"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "context = torch.zeros((1, 1), dtype=torch.long, device=device)\n",
     "print(decode(model.generate(context, max_new_tokens=500)[0].tolist()))\n",
-    "open('more.txt', 'w').write(decode(model.generate(context, max_new_tokens=5000)[0].tolist()))"
+    "# open('more.txt', 'w').write(decode(model.generate(context, max_new_tokens=5000)[0].tolist()))"
    ]
   }
  ],
@@ -144,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
