--- a/gpt1.ipynb
+++ b/gpt1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,16 +14,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.788929 M parameters\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/pytorch21/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step 0: train loss 4.2227, val loss 4.2305\n"
+     ]
+    }
+   ],
    "source": [
     "gpt.train()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,27 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[61, 46, 39, 58, 1, 57, 43, 56, 60, 47, 41, 43, 57, 1, 46, 43, 1, 46, 39, 57, 1, 42, 53, 52, 43, 1, 44, 53, 56, 1, 46, 47, 57, 1, 41, 53, 59, 52, 58, 56, 63, 1, 12]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "43"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_text = \"what services he has done for his country ?\"\n",
     "input_tokens = encode(input_text)\n",
@@ -66,24 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "what services he has done for his country ?\n",
-      "\n",
-      "Second Servant:\n",
-      "It stands, sir; and, this inful thing;\n",
-      "we'll prove your husband. When we rebest his, I\n",
-      "stand will believe your arres: for I do; and power\n",
-      "As I will know these sad\n",
-      "'Son and must be th\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "context = torch.zeros((1, len(input_tokens)), dtype=torch.long, device=device)\n",
     "context[0] = torch.tensor(input_tokens, dtype=torch.long)\n",
@@ -92,44 +82,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " Kind Richard and 'twas the moxney.\n",
-      "\n",
-      "KING RICHARD III:\n",
-      "Yea, my Lord,\n",
-      "Nobility and myself; wicked us my stay,\n",
-      "And buk my crown,\n",
-      "Whose vengeanance shall be desert, as I hreceive:\n",
-      "My name, as best is at Plewis,\n",
-      "My less heavy known and rightly guilty have\n",
-      "A fin anger busin.\n",
-      "\n",
-      "DUKE OF YORK:\n",
-      "My dear right.\n",
-      "\n",
-      "KING RICHARD III:\n",
-      "They seem not; in, give me one again.\n",
-      "\n",
-      "QUEEN MARGARET:\n",
-      "Well, welcome, gentle Nurse, thither the commony.\n",
-      "\n",
-      "QUEEN MARGARET:\n",
-      "The prettige hath before they keeep the foot!\n",
-      "This is my m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "context = torch.zeros((1, 1), dtype=torch.long, device=device)\n",
-    "print(decode(model.generate(context, max_new_tokens=500)[0].tolist()))\n",
-    "# open('more.txt', 'w').write(decode(model.generate(context, max_new_tokens=5000)[0].tolist()))"
+    "print(decode(model.generate(context, max_new_tokens=300)[0].tolist()))\n",
+    "open('more.txt', 'w').write(decode(model.generate(context, max_new_tokens=2000)[0].tolist()))"
    ]
   }
  ],
@@ -149,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
