re-rua the  code for logs

--- a/gpt1.ipynb
+++ b/gpt1.ipynb
@@ -36,7 +36,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 0: train loss 4.2227, val loss 4.2305\n"
+      "step 0: train loss 4.2227, val loss 4.2305\n",
+      "step 500: train loss 1.7549, val loss 1.9057\n",
+      "step 1000: train loss 1.3914, val loss 1.6041\n",
+      "step 1500: train loss 1.2676, val loss 1.5255\n",
+      "step 2000: train loss 1.1833, val loss 1.5015\n",
+      "step 2500: train loss 1.1268, val loss 1.4876\n",
+      "step 3000: train loss 1.0723, val loss 1.4855\n",
+      "step 3499: train loss 1.0162, val loss 1.4980\n",
+      "\n",
+      "And God not he be both put up her punished;\n",
+      "The aravitation of your discards of your his;\n",
+      "And soul informed in arms, his traws rooted to kissubject,\n",
+      "Do skings, alLong and men expressites of these sorrow.\n",
+      "\n",
+      "MAMILLIA:\n",
+      "A man strive, 'tis so, much to be sicker;\n",
+      "That's my confidented words at I have some inflicted\n",
+      "That noble unto my master's.\n",
+      "\n",
+      "DUKE VINCENTIO:\n",
+      "Good try; and his likely lander departured wars\n",
+      "Upon our opinience, and paterful withours.\n",
+      "\n",
+      "FRIAR Romeo-match; I had witch'd away's but our past\n"
      ]
     }
    ],
@@ -46,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,9 +82,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[61, 46, 39, 58, 1, 57, 43, 56, 60, 47, 41, 43, 57, 1, 46, 43, 1, 46, 39, 57, 1, 42, 53, 52, 43, 1, 44, 53, 56, 1, 46, 47, 57, 1, 41, 53, 59, 52, 58, 56, 63, 1, 12]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "43"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "input_text = \"what services he has done for his country ?\"\n",
     "input_tokens = encode(input_text)\n",
@@ -71,9 +112,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "what services he has done for his country ?--\n",
+      "He is full too-night, which delivers gloved,\n",
+      "Forbed of my pity, In revenge, my live\n",
+      "That his deputy tenoment-volt, he\n",
+      "The many hath not well deaen?\n",
+      "\n",
+      "SICINIUS:\n",
+      "Dost thought?\n",
+      "\n",
+      "CORIOLANUS:\n",
+      "Apeach old \n"
+     ]
+    }
+   ],
    "source": [
     "context = torch.zeros((1, len(input_tokens)), dtype=torch.long, device=device)\n",
     "context[0] = torch.tensor(input_tokens, dtype=torch.long)\n",
@@ -82,9 +141,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Given me them left, good Paulina, with flowers men\n",
+      "'Considers;' all alone:' tell me neither thorough for in\n",
+      "plock she me them were none speak with me\n",
+      "goodly.\n",
+      "\n",
+      "AUTOLYCUS:\n",
+      "I am sure, for the fawn worse, In suffering tranded.\n",
+      "\n",
+      "POLIXENES:\n",
+      "One what's much. Yet, that nence back on the\n",
+      "words: how came to y\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2001"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "context = torch.zeros((1, 1), dtype=torch.long, device=device)\n",
     "print(decode(model.generate(context, max_new_tokens=300)[0].tolist()))\n",
